--- a/RPSGame/Properties/launchSettings.json
+++ b/RPSGame/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "RPSGame": {
       "commandName": "Project",
-      "commandLineArgs": "Rock Scissors Banana"
+      "commandLineArgs": "Rock Paper Scissors Banana Passerby"
     }
   }
 }
